Fixes directory structure and namespace #4

--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
   "name": "dbarchowsky/littled",
   "autoload": {
     "psr-0": {
-      "Littled": "src"
+      "Littled": "lib/"
     }
   },
   "require": {
