Changed autoload from psr-0 to psr-4

--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
   "name": "dbarchowsky/littled",
   "autoload": {
     "psr-4": {
-      "Littled": "lib/"
+      "Littled\\": "lib/"
     }
   },
   "require": {
