--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "gulp": "^4.0.0",
     "gulp-concat": "^2.6.1",
     "gulp-rename": "^1.4.0",
-    "gulp-uglify": "^3.0.1"
-  }
+    "gulp-terser": "^1.1.5"
+  },
+  "dependencies": {}
 }
