--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
   "require": {
   },
   "require-dev": {
-    "phpunit/phpunit": "^8"
+    "phpunit/phpunit": "^8",
+    "guzzlehttp/guzzle": "~6.0"
   }
 }
