--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,8 @@
   "name": "dbarchowsky/littled",
   "autoload": {
     "psr-4": {
-      "Littled\\": "lib/"
+      "Littled\\": "lib/",
+      "Littled\\Tests\\": "tests/"
     }
   },
   "require-dev": {
