--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     }
   },
   "require-dev": {
+    "guzzlehttp/guzzle": "^7.0",
     "phpunit/phpunit": "^9",
     "dbarchowsky/common_lib": "dev-master"
   },
