Moved classes from SiteContent to PageContent\SiteSection

--- a/.gitignore
+++ b/.gitignore
@@ -7,5 +7,5 @@ _gsdata_/
 composer.phar
 composer.lock
 node_modules/
-tests/config/
-tests/assets/*-output-template.php
+Tests/config/
+Tests/assets/*-output-template.php
