--- a/package.json
+++ b/package.json
@@ -33,8 +33,10 @@
   "devDependencies": {
     "gulp": "^4.0.0",
     "gulp-concat": "^2.6.1",
+    "gulp-jest": "^4.0.4",
     "gulp-rename": "^1.4.0",
-    "gulp-terser": "^1.1.5"
-  },
-  "dependencies": {}
+    "gulp-terser": "^1.1.5",
+    "jest": "^27.5.1",
+    "jquery": "^3.6.0"
+  }
 }
