--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,8 @@
 {
     "name": "dbarchowsky/littled",
     "require": {
-        "php": ">=8.1"
+        "php": ">=8.1",
+        "phpmailer/phpmailer": "^6.9.1"
     },
     "autoload": {
         "psr-4": {
